# babylon

./: .dockerignore  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_PROCESS.md  SECURITY.md  a  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  going.json  init.sh  old.json  outs.json
.circleci/: config.yml
.github/: CODEOWNERS
app/: ante_btc_validation_decorator.go  app.go  app_test.go  build_tags.go  constants.go  e2e_code.go  e2e_include_upgrades.go  enable_transfers_endblock.go  encoding.go  evm_ante.go  evm_chain_id_test.go  evm_config.go  export.go  genesis_test.go  include_upgrade_e2e.go  include_upgrade_mainnet.go  include_upgrade_testnet.go  modules.go  signer.go  test_helpers.go  token_pair.go  token_pairs.go
bls/: bls.go  bls_test.go  types.go  util.go
btcstaking/: btcstaking_test.go  errors.go  identifiable_staking.go  identifiable_staking_test.go  identifiable_staking_types.go  scripts_utils.go  sighash.go  staking.go  staking_test.go  staking_testvectors_test.go  staking_utils_test.go  types.go  types_test.go  witness_utils.go
btctxformatter/: formatter.go  formatter_test.go
client/: README.md  go.mod  go.sum  parsers.go
docs/: architecture.md  bitcoin-multisig-stake.md  bitcoin-stake-expansion.md  bitcoin-stake-extension.md  bls_key_password_management.md  btc-transactions-validity.md  (+12 more)
wasmbinding/testdata/: Cargo.toml  README.md
wasmbinding/testdata/artifacts/: testgrpc-aarch64.wasm  testgrpc.wasm
(+1610 files in other folders)
