[package]
name = "testdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
babylon-example = { git = "https://github.com/babylonlabs-io/bindings", tag = "v0.1.0", default-features = false }
